@@ -459,6 +459,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<forkCount>1</forkCount>
+					<argLine>-server -XX:+UseCompressedOops -Xmx4096m -XX:MaxPermSize=512M</argLine>
 					<reuseForks>false</reuseForks>
 				</configuration>
 			</plugin>
